# watsup

./: .gitignore  README.md  dune-project  watsup.opam
.claude/: settings.local.json
docs/: development-guide.md  overview.md
docs/plans/: 2026-02-03-watsup-design.md  2026-02-03-watsup-implementation.md  2026-02-04-watsup-phase2.md  2026-02-07-jira-oauth2.md  2026-03-01-e2e-test-redesign-plan.md  2026-03-01-e2e-test-redesign.md  2026-03-02-ux-improvements-design.md  2026-03-02-ux-improvements.md  2026-03-03-auto-split-design.md  2026-03-03-cli-color-design.md  2026-03-03-jira-search-design.md  2026-03-03-jira-search-implementation.md
lib/: category.ml  category.mli  config.ml  config.mli  dune  duration.ml  duration.mli  io.ml  io.mli  jira_api.ml  jira_api.mli  jira_search.ml  jira_search.mli  main_logic.ml  main_logic.mli  processor.ml  processor.mli  prompt.ml  prompt.mli  tempo.ml  tempo.mli  tempo_api.ml  tempo_api.mli  ticket.ml  ticket.mli  watson.ml  watson.mli  watsup.ml  worklog.ml  worklog.mli
scripts/: test-cli.sh
test/: dune  test_e2e.ml
